# anticipating_many_futures

./: CMakeLists.txt  Integrator.cpp  Integrator.h  README.md  SceneDrawer.cpp  SceneDrawer.h  SkeletonTracker.cpp  SkeletonTracker.h  Vaecoder.cpp  Vaecoder.h  eigen_extras.cpp  eigen_extras.h  main.cpp  skeleton_helper.cpp  skeleton_helper.h  timer.h  user_t.cpp  user_t.h
models/: temp_trans2.txt
python_model_training/: CVTE.py  CVTE_without_Theano.py  run_CVTE.py  run_MVTE_trans.py  transform_data_skel.py  transform_data_trans.py
